[package]
name = "apple-psi"
version = "0.1.0"
edition = "2021"

[dependencies]
poksho = { path = "../poksho" }
zkcredential = {path = "../zkcredential"}
cuckoofilter = {path = "../rust-cuckoofilter"}
aes-gcm = "0.10"
aes = "0.8"
hex = "0.4"
rayon = "1.5"

rand = "0.8"
rand_core = {version = "0.6", features = ["getrandom"]}
cfg-if = "1.0.0"
curve25519-dalek = { version = "4.0", features = ["serde", "rand_core"] }
derive-where = "1.2.5"
displaydoc = "0.2"
lazy_static = "1.4.0"
partial-default = { version = "0.1.0", features = ["derive"] }
serde = { version = "1.0.106", features = ["derive"] }
sha2 = "0.10"
subtle = "2.3"
thiserror = "1.0.57"
boring = "4.6.0"