cargo-features = ["edition2024"]
[package]
name = "shamir"
version = "0.1.0"
edition = "2021"

[dependencies]
poksho = { path = "../poksho" }
zkcredential = {path = "../zkcredential"}

rand = "0.8"
rand_core = "0.6"
cfg-if = "1.0.0"
curve25519-dalek = { version = "4.0", features = ["serde", "rand_core"] }
derive-where = "1.2.5"
displaydoc = "0.2"
lazy_static = "1.4.0"
partial-default = { version = "0.1.0", features = ["derive"] }
serde = { version = "1.0.106", features = ["derive"] }
sha2 = "0.10"
subtle = "2.3"
thiserror = "1.0.57"
num-traits = "0.2"

# If rayon is enabled, certain operations will use rayon's thread pool.
rayon = { version = "1.8.0", optional = true }